# demo-server-gcp

./: CMakeLists.txt  Dockerfile  README.md  cloudbuild.yaml  kubernetes-deployment.yaml
proto/: CMakeLists.txt
proto/demo_service_proto/: demo_service.proto
server/: CMakeLists.txt
server/src/: demo_server.cpp
